EDIT 20250122 강후현 메인 깨짐 현상 수정

--- a/src/main/webapp/html/main/main-login.html
+++ b/src/main/webapp/html/main/main-login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>지식의 숲</title>
-    <link rel="stylesheet" href="./../../asset/css/main/main01.css" />
+    <link rel="stylesheet" href="./../../asset/css/main/main.css" />
     <link rel="stylesheet" href="./../../asset/css/main/header.css" />
     <link rel="stylesheet" href="./../../asset/css/main/footer.css" />
     <script src="./../../asset/js/main/main.js"></script>
